--- a/main.html
+++ b/main.html
@@ -76,9 +76,9 @@
 </head>
 <body>
 
-  <button onclick="window.open(`https://ace-md-pairing-59fb1c1e9ab2.herokuapp.com/pair`)" class="btn">Pairing Code</button>
+  <button onclick="window.open(`https://ace-md-session.onrender.com/pair`)" class="btn">Pairing Code</button>
   <button onclick="window.open(`https://github.com/acejobbie/Ace-bug-bot`)" class="btn">Bot Repo</button>
-  <button onclick="window.open(`https://ace-md-pairing-59fb1c1e9ab2.herokuapp.com/scan`)" class="btn">Scan Qr Code</button>
+  <button onclick="window.open(`https://ace-md-session.onrender.com/scan`)" class="btn">Scan Qr Code</button>
   <button onclick="window.open(`https://github.com/acejobbie/ace-md-plugins`)" class="btn">Plugins</button>
   <button onclick="window.open(`https://wa.me/message/254726856795`)" class="btn">Contact Me</button>
   <button onclick="window.open(`https://chat.whatsapp.com/LqYfmGAmfbnHhtSWSsXP1v`)" class="btn">Wa Group</button>
