--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>DREX MD PAIRING CODE</title>
+  <title>ACE MD PAIRING CODE</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
